#2317 Modified the logic to default activeOnly to true.
True is set only for property actions associated with property 'active' of activatable entities. Factory method ReferenceHierarchyWebUiConfig#mkPropActionForMasterEntity should be used to achieve this behaviour in TG-based applications.